[tool.poetry]
name = "Tracker"
version = "0.0.1"
description = "Simple app to track visits"
authors = ["Vinayak Saxena <vinayak.saxena@uwaterloo.ca>"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
fastapi = { version = "^0.135.1", extras = ["standard"] }

[tool.fastapi]
entrypoint = "app.main:app"