[project]
name = "tracker"
version = "0.1.0"
description = "Simple app to track visits"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Vinayak Saxena", email = "vinayak.saxena@uwaterloo.ca" }
]
dependencies = [
    "fastapi[standard]>=0.135.1",
    "sqlalchemy==2.0.48",
    "sqlmodel==0.0.37",
]

[tool.uv]
dev-dependencies = []

[tool.fastapi]
entrypoint = "app.main:app"